Landing boxes are now fully clickable and no longer rotate on mobile devices

--- a/app/assets/stylesheets/objects/landing.scss
+++ b/app/assets/stylesheets/objects/landing.scss
@@ -14,6 +14,7 @@
 }
 
 .landing-box {
+  cursor: pointer;
   flex: 1 1 178px;
   margin: 5px;
   z-index: 1;
@@ -51,13 +52,17 @@
     height: auto;
     min-height: 100%;
   }
+}
 
-  &:hover {
-    .landing-front {
-      transform: rotateY(180deg);
-    }
-    .landing-back {
-      transform: rotateY(0deg);
+.no-touch {
+  .landing-box {
+    &:hover {
+      .landing-front {
+        transform: rotateY(180deg);
+      }
+      .landing-back {
+        transform: rotateY(0deg);
+      }
     }
   }
 }
